refactor: ajustar gráfico para mostrar productos más vendidos y ajustes UI